recommendation.html 반영

--- a/templates/check/mypage.html
+++ b/templates/check/mypage.html
@@ -59,7 +59,7 @@
                             <div class="myp_in">
                                 <div class="myp_summary mp0">
                                     <h3 class="i_title ">
-                                        <span>Earned Credit information</span> (Current Simulation Date : {{ profile.uploaded_at | date:"Y/m/d" }})
+                                        <span>Earned Credit information</span> (Current Simulation Date : {{ profile.updated_at | date:"Y/m/d" }})
                                     </h3>
                                     <div class="charttp2div">
 
