--- a/templates/recommendation/recommendation.html
+++ b/templates/recommendation/recommendation.html
@@ -126,6 +126,7 @@
 
                     .rec_curriculum_innerbox .item {
                         min-height: 205px;
+                        width: 100%;
                         position: relative;
                         box-sizing: border-box;
                         border: 1px solid #e1e1e1;
@@ -275,7 +276,7 @@
                         display: inline-block;
                         margin-right: 20px;
                         margin-bottom: 10px;
-                        width: 214px;
+                        width: 15em;
                     }
 
                     .rec_curriculum_innerbox .opend_items {
