--- a/templates/recommendation/recommendation.html
+++ b/templates/recommendation/recommendation.html
@@ -382,7 +382,7 @@
         </section>
     </div>
 
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
         function decodeHTMLEntities(text) {
             var entities = [
