--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     <title>SNU-GSDS-Home</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="{% static 'common/css/styles.css' %}"/>
-    <link rel="stylesheet" href="{% static 'assets/css/main.css' %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'common/css/styles.css' %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'assets/css/main.css' %}"/>
     <noscript>
         <link rel="stylesheet" href="{% static 'assets/css/noscript.css' %}"/>
     </noscript>
@@ -47,12 +47,12 @@
     <!-- Footer -->
 </div>
 <!-- Scripts -->
-<script src="{% static 'assets/js/jquery.min.js' %}"></script>
-<script src="{% static 'assets/js/jquery.scrolly.min.js' %}"></script>
-<script src="{% static 'assets/js/jquery.scrollex.min.js' %}"></script>
-<script src="{% static 'assets/js/browser.min.js' %}"></script>
-<script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
-<script src="{% static 'assets/js/util.js' %}"></script>
-<script src="{% static 'assets/js/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/jquery.scrolly.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/jquery.scrollex.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/browser.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/breakpoints.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/util.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/main.js' %}"></script>
 </body>
 </html>
