--- a/templates/check/mypage.html
+++ b/templates/check/mypage.html
@@ -136,7 +136,7 @@
             </div>
         </section>
     </div>
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
         function getCookie(name) {
             var cookieValue = null;
