--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
 /*
