--- a/common/css/styles.css
+++ b/common/css/styles.css
@@ -45,5 +45,5 @@
     box-sizing: border-box;
     text-indent: initial;
     border-spacing: 2px;
-    border-color: grey;
+    border-color: white;
 }
